sidebar: Fix scrollbar bug
- Remove iframe height calculation logic
- Turn on iframe default scroll
- Increase sidebar heigth 99vh to 100vh

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -1,5 +1,9 @@
 //--- common
 
+.framed-body {
+    overflow: hidden;
+}
+
 .main {
     width: 100%;
     background-color: #fff;
@@ -3524,6 +3528,10 @@ div.markdown-preview {
     padding:10px !important;
 
     .help { display:none; }
+
+    .help-droppable {
+        display: inline;
+    }
 
     .attach-wrap {
         text-align:center;
