--- a/app/assets/stylesheets/less/_usermenu.less
+++ b/app/assets/stylesheets/less/_usermenu.less
@@ -65,7 +65,6 @@
   .user-ul {
     -ms-overflow-style: -ms-autohiding-scrollbar;
     overflow-y: scroll;
-    height: 100vh;
 
     &::-webkit-scrollbar {
       height: 10px;
