--- a/app/assets/stylesheets/less/_yobiUI.less
+++ b/app/assets/stylesheets/less/_yobiUI.less
@@ -9,7 +9,7 @@
 body {
     font-size:13px;
     display: flex;
-    min-height: 99vh;
+    min-height: 100vh;
 }
 label, input, button, select, textarea { font-size:12px; }
 select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"],
